# cure-pro-wireless

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Justfile  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  battery.c  battery.h  ble_gap.c  ble_gap.h  common.h  config.h  cure.c  espnow.c  espnow.h  gap.c  gap.h  handler.h  heartbeat.c  heartbeat.h  hid_gatt_svr_svc.c  hid_gatt_svr_svc.h  hid_svc.c  hid_svc.h  idf_component.yml  indicator.c  indicator.h  kb_matrix.c  kb_matrix.h  kb_mgt.c  kb_mgt.h  keymap.c  keymap.h  power.c  power.h  power_mgmt.c  power_mgmt.h  utils.c  utils.h
